03-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-deployment
  namespace: echo-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: echo-server
        image: andreyylyy/echo-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
      imagePullSecrets:
      - name: dockerhub-secret
